--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "app:serve": "nx serve",
+    "serve:app": "nx serve",
+    "serve:api": "nx serve api",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
