--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "10.3.1",
+    "bootstrap": "^4.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
